package it.unibo.samplejavafx.mvc.model.replay;

import com.fasterxml.jackson.annotation.JsonProperty;
import it.unibo.samplejavafx.mvc.model.entity.Entity;
import it.unibo.samplejavafx.mvc.model.point2d.Point2D;

/**
 * Represents an entity appearing on the board.
 *
 * @param turn the turn number.
 * @param entity the entity that spawned.
 * @param position the position where it spawned.
 * @param whiteScore the score of the white player.
 * @param blackScore the score of the black player.
 */
public record SpawnEvent(
    @JsonProperty("turn") int turn, 
    @JsonProperty("entity") Entity entity, 
    @JsonProperty("position") Point2D position,
    @JsonProperty("whiteScore") int whiteScore,
    @JsonProperty("blackScore") int blackScore
) implements GameEvent {
    @Override
    public int getTurn() {
        return turn;
    }

    @Override
    public int getWhiteScore() {
        return whiteScore;
    }

    @Override
    public int getBlackScore() {
        return blackScore;
    }

    @Override
    public String getEventDescription() {
        return String.format("Spawn | %s | %s", entity.getName(), position);
    }
}
